--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Lucas Silva <lucas76leonardo@gmail.com>"]
 readme = "README.md"
-packages = [{include = "pocpoc", from = "src/pocpoc"}]
+packages = [{include = "pocpoc", from = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.7"
