--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,10 @@ packages = [{include = "pocpoc", from = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.7"
-sqlalchemy = {version = "^1.4.44", extras = ["sqlalchemy"]}
-pika = {version = "^1.3.1", extras = ["rabbitmq"]}
-alembic = {version = "^1.8.1", extras = ["sqlalchemy"]}
-colorlog = {version = "^6.7.0", extras = ["debugging"]}
+sqlalchemy = {version = "^1.4.44", extras = ["sqlalchemy"], optional = true}
+pika = {version = "^1.3.1", extras = ["rabbitmq"], optional = true}
+alembic = {version = "^1.8.1", extras = ["sqlalchemy"], optional = true}
+colorlog = {version = "^6.7.0", extras = ["debugging"], optional = true}
 
 
 [tool.poetry.group.dev.dependencies]
@@ -29,3 +29,8 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 pocpoc = "pocpoc.api.microservices.cli:cli"
+
+[tool.poetry.extras]
+sqlalchemy = ["sqlalchemy", "sqlalchemy-stubs"]
+rabbitmq = ["pika", "types-pika"]
+debugging = ["colorlog"]
