--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pocpoc"
-version = "0.1.1"
+version = "0.1.2"
 description = ""
 authors = ["Lucas Silva <lucas76leonardo@gmail.com>"]
 readme = "README.md"
@@ -8,10 +8,10 @@ packages = [{include = "pocpoc", from = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.7"
-sqlalchemy = {version = "^1.4.44", extras = ["sqlalchemy"], optional = true}
-pika = {version = "^1.3.1", extras = ["rabbitmq"], optional = true}
-alembic = {version = "^1.8.1", extras = ["sqlalchemy"], optional = true}
-colorlog = {version = "^6.7.0", extras = ["debugging"], optional = true}
+sqlalchemy = {version = "^1.4.44", optional = true}
+pika = {version = "^1.3.1", optional = true}
+alembic = {version = "^1.8.1", optional = true}
+colorlog = {version = "^6.7.0", optional = true}
 
 
 [tool.poetry.group.dev.dependencies]
@@ -20,8 +20,8 @@ pytest-cov = "^4.0.0"
 mypy = "0.981"
 flake8 = "3.7"
 black = "^23.1.0"
-sqlalchemy-stubs = {version = "^0.4", extras = ["sqlalchemy"]}
-types-pika = {version = "^1.2.0b1", extras = ["rabbitmq"]}
+sqlalchemy-stubs = {version = "^0.4", optional = true}
+types-pika = {version = "^1.2.0b1", optional = true}
 
 [build-system]
 requires = ["poetry-core"]
