--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pocpoc"
-version = "0.1.2"
+version = "0.1.3"
 description = ""
 authors = ["Lucas Silva <lucas76leonardo@gmail.com>"]
 readme = "README.md"
@@ -31,6 +31,6 @@ build-backend = "poetry.core.masonry.api"
 pocpoc = "pocpoc.api.microservices.cli:cli"
 
 [tool.poetry.extras]
-sqlalchemy = ["sqlalchemy", "sqlalchemy-stubs"]
+SQA = ["sqlalchemy", "sqlalchemy-stubs"]
 rabbitmq = ["pika", "types-pika"]
 debugging = ["colorlog"]
