--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pocpoc"
-version = "0.1.3"
+version = "0.1.4"
 description = ""
 authors = ["Lucas Silva <lucas76leonardo@gmail.com>"]
 readme = "README.md"
@@ -8,6 +8,7 @@ packages = [{include = "pocpoc", from = "src"}]
 
 [tool.poetry.dependencies]
 python = "^3.7"
+click = "8.1.3"
 sqlalchemy = {version = "^1.4.44", optional = true}
 pika = {version = "^1.3.1", optional = true}
 alembic = {version = "^1.8.1", optional = true}
