--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,6 +19,23 @@
                 "debug-test",
                 "debug-in-terminal"
             ]
+        },
+        {
+            "name": "Python: Flask file",
+            "type": "python",
+            "request": "launch",
+            "module": "flask",
+            "env": {
+                "FLASK_APP": "${file}",
+                "FLASK_DEBUG": "1"
+            },
+            "args": [
+                "run",
+                "--no-debugger",
+                "--no-reload"
+            ],
+            "jinja": true,
+            "justMyCode": true
         }
     ]
 }
