--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ sqlalchemy = {version = "^1.4.44", optional = true}
 pika = {version = "^1.3.1", optional = true}
 alembic = {version = "^1.8.1", optional = true}
 colorlog = {version = "^6.7.0", optional = true}
+python-json-logger = {version = "^2.0.4", optional = true}
 
 
 [tool.poetry.group.dev.dependencies]
@@ -38,4 +39,4 @@ pocpoc = "pocpoc.api.microservices.cli:cli"
 [tool.poetry.extras]
 SQA = ["sqlalchemy", "sqlalchemy-stubs", "alembic"]
 rabbitmq = ["pika", "types-pika"]
-debugging = ["colorlog"]
+debugging = ["colorlog", "python-json-logger"]
