--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,11 @@ flask = "^2.2.3"
 croniter = "^1.3.8"
 types-croniter = "^1.3.2.6"
 
+
+[tool.poetry.group.example_3.dependencies]
+redis = "^4.5.3"
+types-redis = "^4.5.3.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
